# axum-web

./: .env  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: docker-image.yml  rust.yml
docker/: Dockerfile
docker/school-server/: Dockerfile
proto/: school.proto
src/: async_db.rs  db.rs  err.rs  lib.rs  main.rs  school.rs  school_proto.rs  school_server.rs  server.rs  templates.rs
src/db/: hashmap_db.rs  mysql_db.rs  redis_db.rs
src/school_server/: school_proto.rs
src/sea/: class.rs  mod.rs  prelude.rs  sea_orm.rs  student.rs  teacher.rs
src/templates/: askama_template.rs  hello_template.rs  stpl_template.rs
templates/: china.stpl  hello.html  hello.stpl  twitter.html  twitter.stpl
