[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
log = "0.4"
env_logger = "0.10.0"
mysql = "24.0.0"
askama = "0.12.0"
tonic = "0.9"
prost = "0.11"

#[[bin]] # Bin to run the HelloWorld gRPC server
#name = "helloworld-server"
#path = "src/server.rs"

#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "helloworld-client"
#path = "src/client.rs"

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name="school-server"
path= "src/school_server.rs"
